tests/typechecker/should_fail/proc_tests4.csp
test({x}) = true
test(_) = false

b = test({STOP,STOP})
